# backend-rebase-session-3

./: .env-dev  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
app/: __main__.py  api.py  settings.py
app/dependencies/: storage_manager.py  validations.py
app/endpoints/: __init__.py  blobs.py
app/models/: responses.py  storage.py
scripts/: install.sh  start.sh
