[project]
name = "backend-rebase-session-2"
version = "0.1.0"
description = ""
authors = [{name = "ofekMula"}]
requires-python = ">=3.13"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.9.10",
    "ipython>=8.3.5",
    "pre-commit>=4.1.0",
    "commitizen>=3.30.0",
    "dunamai>=1.22.0",
    "safety>=3.2.9",
    "pylint>=3.3.0",
    "bandit>=1.7.4",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
fixable = ["ALL"]
